--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         }
     </style>
 
-<link rel="preload" href="/sandbox-gui_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/sandbox-gui.js"></head>
+<link rel="preload" href="./sandbox-gui_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="./sandbox-gui.js"></head>
 
 <body>
     <!-- The WASM code will resize the canvas dynamically -->
