--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>ラズピコPLL計算</title>
 
     <!-- config for our rust wasm binary. go to https://trunkrs.dev/assets/#rust for more customization -->
-    <script type="module">import init from './sandbox-gui.js';init('./sandbox-gui_bg.wasm');</script>
+    <script type="module">import init from '/whitesandbox/sandbox-gui.js';init('/whitesandbox/sandbox-gui_bg.wasm');</script>
     <!-- this is the base url relative to which other urls will be constructed. trunk will insert this from the public-url option -->
     <base href="/">
 
@@ -115,8 +115,8 @@
         }
     </style>
 
-<link rel="preload" href="./sandbox-gui_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="./sandbox-gui.js"></head>
+<link rel="preload" href="/whitesandbox/sandbox-gui_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/whitesandbox/sandbox-gui.js"></head>
 
 <body>
     <!-- The WASM code will resize the canvas dynamically -->
